# ASCENT-ACP

./: .gitignore  NETCDF_OUTPUT_SPEC.md  OPTIMIZATION_SUMMARY.md  QA_CRITERIA.md  README.md  apply_clock_alignment.py  benchmark_optimizations.py  pyproject.toml  run_2021_activate.sh  run_full_activate_merge.py  run_full_activate_overnight.sh  test_clock_alignment.py
ASCENT_ACP/: __init__.py  ascent_acp.py  config.py  families.py  filtering.py  flights.py  icartt_headers.py  isara_bridge.py  merge.py  netcdf_export.py  pipeline.py  plots.py  results.py  run.py  sizebins.py  varmap.py  windowing_raw.py  windows.py
ASCENT_ACP/data/: ACTIVATE_LAS_bins.csv  ACTIVATE_SMPS_bins.csv  ACTIVATE_instrument_families.json
clock_alignment_results/: shift_diagnostics_merged1sec_allInstruments_2020Feb_V2.csv  shift_diagnostics_merged1sec_allInstruments_2020_V2.csv  shift_diagnostics_merged1sec_allInstruments_2021_V2.csv  variable_shift_table.csv
configs/: activate_2020.json  activate_2020_full.json  activate_2021.json  activate_2021_full.json
tests/: test_families.py  test_filtering.py  test_flights.py  test_icartt_headers.py  test_isara_bridge.py  test_netcdf_groups.py  test_resume.py  test_sizebins.py  test_windowing_raw.py  test_windows.py
