[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascent-acp"
version = "0.1.0"
description = "Atmospheric Suborbital Classification & Evaluation Network Tool - Aerosol, Cloud, and Precipitation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Reed Espinosa", email = "reed.espinosa@nasa.gov"}
]
keywords = ["atmospheric", "science", "icartt", "data", "aerosol", "cloud", "precipitation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "icartt-read-and-merge>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/ReedEspinosa/ASCENT-ACP"
Repository = "https://github.com/ReedEspinosa/ASCENT-ACP"
Issues = "https://github.com/ReedEspinosa/ASCENT-ACP/issues"

[tool.setuptools]
packages = ["ASCENT_ACP"]

[tool.setuptools.package-data]
"*" = ["*.md", "LICENSE"]


